[package]
name = "remote"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
failure = { version = "0.1", default_features = false, features = ["derive"] }
http = "0.2"
libc = "0.2"
log = "0.4"
nserror = { path = "../xpcom/rust/nserror" }
nsstring = { path = "../xpcom/rust/nsstring" }
xpcom = { path = "../xpcom/rust/xpcom" }
