[package]
name = "nora-inject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nora_inject_lib"
crate-type = ["cdylib"]

[dependencies]
oxc = { version = "0.31.0", features = ["serialize", "wasm"] }
serde = "1.0.210"
serde_json = "1.0.128"
wit-bindgen = "0.34.0"
