[package]
name = "noraneko-hmr-transformer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0.120"
swc_core = { version = "0.96.*", features = [
  "ecma_plugin_transform",
  "ecma_quote",
] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
